immersion: add stub for upsert contest registration
